--- a/pipeline-runner/NAMESPACE
+++ b/pipeline-runner/NAMESPACE
@@ -15,7 +15,9 @@ export(compute_sample_edrops)
 export(create_sample_id_map)
 export(create_scdata)
 export(create_seurat)
+export(detect_variable_types)
 export(diet_scdata)
+export(download_cl_metadata_file)
 export(download_s3_files)
 export(download_user_files)
 export(embed_and_cluster)
@@ -29,10 +31,12 @@ export(filter_low_cell_samples)
 export(filter_low_cellsize)
 export(filter_parent_cellsets)
 export(filter_unnamed_features)
+export(find_clm_columns)
 export(generate_default_values_cellSizeDistribution)
 export(generate_elbow_plot_data)
 export(generate_first_step_ids)
 export(getClusters)
+export(get_cell_id_barcode_map)
 export(get_cell_sets)
 export(get_feature_types)
 export(get_subset_cell_sets)
@@ -45,16 +49,20 @@ export(load_parent_experiment_data)
 export(load_seurat)
 export(load_user_files)
 export(make_annot_with_ids)
+export(make_cl_metadata_cellsets)
+export(make_cl_metadata_table)
 export(merge_scdata_list)
 export(normalize_annotation_types)
 export(parse_cellsets)
 export(prepare_experiment)
 export(prepare_sct_integration)
 export(read_10x_annotations)
+export(read_10x_h5_file)
 export(reconstruct_seurat)
 export(remove_filtered_cells)
 export(remove_genes)
 export(remove_used_colors)
+export(replace_cell_class_through_api)
 export(runClusters)
 export(run_emptydrops)
 export(run_geosketch)
@@ -68,6 +76,9 @@ export(subset_ids)
 export(subset_safe)
 export(subset_seurat)
 export(sym_to_ids)
+export(translate_cell_sets)
+export(translate_sample_ids)
+export(unflatten_cell_sets)
 export(upload_to_aws)
 import(data.table)
 importFrom(magrittr,"%>%")
