rename functions, document
Signed-off-by: German Beldorati Stark <gerbeldo@gmail.com>

--- a/pipeline-runner/NAMESPACE
+++ b/pipeline-runner/NAMESPACE
@@ -32,6 +32,7 @@ export(filter_low_cellsize)
 export(filter_parent_cellsets)
 export(filter_unnamed_features)
 export(find_clm_columns)
+export(format_cl_metadata_cellsets)
 export(generate_default_values_cellSizeDistribution)
 export(generate_elbow_plot_data)
 export(generate_first_step_ids)
@@ -49,6 +50,7 @@ export(load_parent_experiment_data)
 export(load_seurat)
 export(load_user_files)
 export(make_annot_with_ids)
+export(make_cl_metadata_cellclass)
 export(make_cl_metadata_cellsets)
 export(make_cl_metadata_table)
 export(merge_scdata_list)
