add function to replace cl metadata cellsets
Signed-off-by: German Beldorati Stark <gerbeldo@gmail.com>

--- a/pipeline-runner/NAMESPACE
+++ b/pipeline-runner/NAMESPACE
@@ -65,6 +65,7 @@ export(remove_filtered_cells)
 export(remove_genes)
 export(remove_used_colors)
 export(replace_cell_class_through_api)
+export(replace_cl_metadata_through_api)
 export(runClusters)
 export(run_emptydrops)
 export(run_geosketch)
