--- a/pipeline-runner/NAMESPACE
+++ b/pipeline-runner/NAMESPACE
@@ -51,6 +51,7 @@ export(parse_cellsets)
 export(prepare_experiment)
 export(prepare_sct_integration)
 export(read_10x_annotations)
+export(read_10x_h5_file)
 export(reconstruct_seurat)
 export(remove_filtered_cells)
 export(remove_genes)
@@ -63,12 +64,25 @@ export(safe_cbind)
 export(score_doublets)
 export(seuratv4_find_and_integrate_anchors)
 export(seuratv4_geosketch_find_and_integrate_anchors)
+export(sort_cluster_names)
 export(subset_experiment)
 export(subset_ids)
 export(subset_safe)
 export(subset_seurat)
 export(sym_to_ids)
+export(translate_cell_sets)
+export(translate_sample_ids)
+export(unflatten_cell_sets)
 export(upload_to_aws)
 import(data.table)
+importFrom(data.table,":=")
+importFrom(data.table,.BY)
+importFrom(data.table,.EACHI)
+importFrom(data.table,.GRP)
+importFrom(data.table,.I)
+importFrom(data.table,.N)
+importFrom(data.table,.NGRP)
+importFrom(data.table,.SD)
+importFrom(data.table,data.table)
 importFrom(magrittr,"%>%")
 importFrom(uuid,UUIDgenerate)
