--- a/pipeline-runner/DESCRIPTION
+++ b/pipeline-runner/DESCRIPTION
@@ -2,33 +2,36 @@ Package: pipeline
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
-           role = c("aut", "cre"),
-           email = "first.last@example.com",
+    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
 License: GPL-3.0
-Depends: 
-    R (>= 4.2.0)
-Imports:
-    batchelor (== 1.12.1),
+Imports: 
+    batchelor,
     covr,
+    data.table,
+    DropletUtils,
+    glmGamPoi,
+    harmony,
+    hdf5r,
     magrittr,
-    data.table
+    paws,
+    RJSONIO,
+    scDblFinder,
+    Seurat,
+    tryCatchLog,
+    uuid,
+    zeallot
 Suggests: 
-    diffviewer,
     devtools,
+    diffviewer,
     httptest,
-    languageserver,
-    roxygen2,
+    mockery,
     styler,
     testthat (>= 3.0.0),
     usethis,
-    glmGamPoi,
-    hdf5r
+    withr
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
-Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
