--- a/pipeline-runner/NAMESPACE
+++ b/pipeline-runner/NAMESPACE
@@ -32,6 +32,7 @@ export(filter_low_cellsize)
 export(filter_parent_cellsets)
 export(filter_unnamed_features)
 export(find_clm_columns)
+export(find_group_columns_cl_metadata)
 export(format_cl_metadata_cellsets)
 export(generate_default_values_cellSizeDistribution)
 export(generate_elbow_plot_data)
@@ -74,6 +75,7 @@ export(safe_cbind)
 export(score_doublets)
 export(seuratv4_find_and_integrate_anchors)
 export(seuratv4_geosketch_find_and_integrate_anchors)
+export(sort_cluster_names)
 export(subset_experiment)
 export(subset_ids)
 export(subset_safe)
