fix python venv stuff
Signed-off-by: Alex Pickering <alexvpickering@gmail.com>

--- a/pipeline-runner/Dockerfile
+++ b/pipeline-runner/Dockerfile
@@ -71,7 +71,7 @@ RUN echo ".libPaths(c('$RENV_LIB', .libPaths()))" >> $(R RHOME)/etc/Rprofile.sit
 
 # install python packages in virtualenv
 ENV WORKON_HOME=/src/.virtualenvs
-RUN R -q -e "reticulate::virtualenv_create('r-reticulate')" && \
+RUN R -q -e "reticulate::virtualenv_create('r-reticulate', python='$(which python3)')" && \
     R -q -e "reticulate::virtualenv_install('r-reticulate', c('geosketch==1.2', 'scanorama==1.7.3'), pip_options='--no-cache-dir')"
 
 # ---------------------------------------------------
