--- a/pipeline-runner/DESCRIPTION
+++ b/pipeline-runner/DESCRIPTION
@@ -15,7 +15,9 @@ Imports:
     batchelor,
     covr,
     magrittr,
-    data.table
+    data.table,
+    hdf5r,
+    glmGamPoi
 Suggests: 
     diffviewer,
     devtools,
@@ -24,9 +26,7 @@ Suggests:
     roxygen2,
     styler,
     testthat (>= 3.0.0),
-    usethis,
-    glmGamPoi,
-    hdf5r
+    usethis
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
