SCE upload works
Signed-off-by: Alex Pickering <alexvpickering@gmail.com>

--- a/pipeline-runner/NAMESPACE
+++ b/pipeline-runner/NAMESPACE
@@ -47,8 +47,8 @@ export(integrate_scdata)
 export(learn_from_sketches)
 export(list_exclude_genes)
 export(load_cellsets)
+export(load_obj2s_file)
 export(load_parent_experiment_data)
-export(load_seurat)
 export(load_user_files)
 export(make_annot_with_ids)
 export(make_cl_metadata_cellclass)
@@ -58,6 +58,7 @@ export(merge_scdata_list)
 export(normalize_annotation_types)
 export(parse_cellsets)
 export(prepare_experiment)
+export(prepare_scdata_list_for_seurat_integration)
 export(prepare_sct_integration)
 export(read_10x_annotations)
 export(read_10x_h5_file)
